--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,10 @@
   <body>
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+    <div class="container">
     <%= yield %>
+    </div>
+
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
