--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+
+<%= render 'shared/banner' %>
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
-<%= link_to "Toutes nos salles partenaires", gyms_path %>
+<p><%= link_to "Toutes nos salles partenaires", gyms_path %></p>
+
