--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,13 +14,8 @@
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
           <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-user"></i> <%= t(".profile", default: "Mon profil") %>
-            <% end %>
-          </li>
-          <li>
-            <%= link_to "#" do %>
-            <i class="fa fa-ticket"></i> <%= t(".profile", default: "Mes entrées") %>
+            <%= link_to user_path(current_user) do %>
+            <i class="fa fa-user"></i> <%= t(".profile", default: "Mon profil / Mes entrées") %>
             <% end %>
           </li>
           <li>
