--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,6 +9,32 @@
 
     <% if user_signed_in? %>
 
+    <% if current_user.user_type == "manager" %>
+    <div class="navbar-wagon-item">
+      <div class="dropdown">
+        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <li>
+          <%= link_to gym_bookings_path(current_user.gym.id) do %>
+            <i class="fa fa-user"></i> <%= t(".profile", default: "Mes réservations") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to "#" do %>
+            <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+            <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <% else %>
+
     <div class="navbar-wagon-item">
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
@@ -31,12 +57,13 @@
         </ul>
       </div>
     </div>
+    <% end %>
 
     <% else %>
 
     <!-- Login text link -->
     <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
-      <% end %>
+    <% end %>
 
   </div>
-  </div>
+</div>
