--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -9,5 +9,9 @@
 
   <body>
     <%= yield %>
+
+    <p> Julien et Romain, Cofondateurs d'hopfit.
+    Pour plus d'informations sur hopfit, contactez-nous via info@hopfit.be
+    </p>
   </body>
 </html>
