validity booking done

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -13,3 +13,16 @@
 .alert-warning {
   background: $red;
 }
+
+.valid {
+  color: green;
+}
+
+.invalid {
+  color: red;
+}
+
+.prix {
+  font-size: 30px;
+  color: red;
+}
