created a footer and buttons

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner {
   color: #FDECDA;
   text-align: center;
-  height: 93vh;
+  height: 70vh;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
@@ -13,9 +13,10 @@
 
 .banner-center{
   text-align: center;
-  padding: 25px 50px;
+  padding: 25px 40px;
   background-color: rgba(8, 76, 97, 0.3);
   border-radius: 6px;
+  max-width:100%;
 }
 
 
@@ -28,31 +29,12 @@
 
 }
 .banner p {
+  padding-top: 20px;
   font-size: 30px;
   font-weight: 300;
-  color: rgba(255, 255, 255, 0.8);
-  text-shadow: 0px 1px rgba(112, 81, 39, 0.4);
+  color: rgba(255, 255, 255, 0.9);
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
   margin-bottom: 20px;
   font-family: 'Alegreya Sans', sans-serif;
 }
 
-.banner-wagon-button {
-  margin-left: 10px;
-  padding: 0 20px;
-  border-radius: 3px;
-  line-height: 40px;
-  background-color: rgba(225, 211, 20, 1);
-  border: 1px solid white;
-  font-family: 'Alegreya Sans', sans-serif;
-  font-size: 25px;
-  font-weight: 900;
-  color: white;
-  text-shadow:  1px 2px 1px rgba(0,0,0,0.4);
-  transition: .3s ease;
-}
-.banner-wagon-button:hover {
-  font-weight: bold;
-  color: rgba(255, 255, 255, 1);
-  background:  rgba(225, 211, 20, 0.7);
-  border-color: white;
-}
