--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -40,6 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
 }
 
 /* Navbar item */
@@ -115,6 +116,7 @@
   margin-top: 15px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: #E6E6E6;
+  left: auto !important;
 }
 .navbar-wagon-dropdown-menu li > a {
   transition: color 0.3s ease;
