--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -50,6 +50,12 @@
   padding: 1rem;
 }
 
+.wrapper .foot-link{
+  align-items: center;
+  justify-content: right;
+  margin: 5px 5px 5px 20px;
+}
+
 .share {
   width: 2rem;
   height: 2rem;
