--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -115,12 +115,12 @@
       </a>
 
     </div>
-  </div>
-  <div class="list-inline">
+
+  <div class="foot-link">
     <div><a href="" class="footer-link"></a>Contact</div>
     <div><a href="" class="footer-link"></a>FAQ</div>
     <div><a href="" class="footer-link"></a></div>
   </div>
-
+  </div>
 </div>
 
