--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -50,7 +50,7 @@
   padding: 1rem;
 }
 
-.wrapper .foot-link{
+.foot-link {
   align-items: center;
   justify-content: right;
   margin: 5px 5px 5px 20px;
