--- a/app/assets/stylesheets/pages/_gymshow.scss
+++ b/app/assets/stylesheets/pages/_gymshow.scss
@@ -1,1 +1,145 @@
-_gymshow.scss
+.gym-banner {
+  color: #FDECDA;
+  text-align: center;
+  height: 60vh;
+  /* if you have a 70px navbar => height: calc(100vh - 70px); */
+  background-size: cover !important;
+  display: flex;
+  justify-content: center;
+  background-position: center;
+  background-image: linear-gradient(-225deg, rgba(52, 18, 0, 0.6) 0%, rgba(110, 55, 0, 0.4) 50%);
+  position: relative;
+}
+
+.gym-banner-title{
+  padding: 25px 50px;
+  background-color: rgba(8, 76, 97, 0.3);
+  border-radius: 6px;
+}
+
+.gym-name {
+  position: absolute;
+  bottom: 10px;
+  left: 20px;
+  color: white;
+  background-color: rgba(8, 76, 97, 0.3);
+  font-size: 4em;
+  margin-right: 40px;
+}
+
+// .gym-wrapper {
+//   display: flex;
+//   justify-content: space-around;
+// }
+
+.details-title {
+  font-size: 20px;
+  margin-right: 40px;
+}
+
+.details {
+  // flex: 2;
+  // overflow: auto;
+  margin-left: 30px;
+  max-width: 800px;
+}
+
+.details h1 {
+  margin-left: 60px;
+  margin-top: 40px;
+}
+
+.offre {
+  // flex: 1;
+  margin-left: 90px;
+  height: 90%;
+  position: fixed; top:520px; right:15%; bottom: 10px;
+  border: solid 1px;
+  border-color: #f4f4f4;
+  padding: 0px 80px 0px 80px;
+  margin-bottom: 5px;
+  color: white;
+  background-color: #423e3e;
+}
+
+.offre-mobile {
+  height: 100%;
+  border: solid 1px;
+  border-color: #f4f4f4;
+  width: 160;
+  //padding: 0px 80px 0px 80px;
+  color: white;
+  background-color: #423e3e;
+}
+
+.offre-mobile h2 {
+  text-align: center;
+}
+
+.btn-mobile-fixed {
+  width: 100%;
+  position: fixed;
+  bottom: 0px;
+}
+
+.btn-mobile {
+  width: 100%;
+}
+
+.entry {
+  font-size: 15px;
+  text-align: center;
+}
+
+.price {
+  font-size: 30px;
+  font-weight: bolder;
+  color: #ff4f4f;
+  text-align: center;
+}
+
+.details-title {
+  font-weight:bolder;
+  border-bottom: 1px solid;
+  border-color: #f4f4f4;
+  padding: 60px;
+}
+
+.description {
+  font-weight: lighter;
+  text-align: left;
+}
+
+
+.opening_hours {
+  font-weight: lighter;
+}
+
+
+.services {
+  font-weight: lighter;
+}
+
+
+.equipments {
+  font-weight: lighter;
+}
+
+.btn {
+  background-color: #ff4f4f;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+}
+
+.btn:hover {
+  background-color: #fc4646;
+}
+
+.modal {
+  padding: 50px
+}
+
+
