--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -83,3 +83,15 @@ make it thinner, then set it to again wrap around the entire parent element.
   padding: 7px 20px;
 }
 
+.btn-show {
+  background-color: #ff4f4f;
+  border: none;
+  padding: 10px;
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+}
+
+.btn-show:hover {
+  background-color: #fc4646;
+}
