--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,8 +10,10 @@
   <h1>Mes entrées</h1>
   <% @bookings.each do |booking| %>
     <p> Vous avez réservé une entrée chez <%= booking.gym.name %> le <%= booking.date.day %>/<%= booking.date.month %>. Elle est valide jusqu'au <%= booking.expiry_date.day %>/<%= booking.expiry_date.month %>.
-      <% if booking.validity == true && booking.expiry_date > Date.new %>
+      <% if booking.validity == true && booking.expiry_date > Date.new && booking.state == "paid" %>
         <span class="valid"> Elle est encore valide. </span>
+      <% elsif booking.validity == true && booking.expiry_date > Date.new || booking.state == "paid" %>
+        <span class="invalid"> Le paiment n'a pas été effectué. </span>
       <% else %>
         <span class="invalid"> Elle n'est plus valide.</span>
       <% end %>
