--- a/app/views/gyms/show.html.erb
+++ b/app/views/gyms/show.html.erb
@@ -17,7 +17,7 @@
     <br>
 
   </div>
-  <button id="mobilecta" type="button" class="btn btn-mobile-fixed hidden-lg" data-toggle="modal" data-target=".bs-example-modal-sm">Acheter une entrée</button>
+  <button id="mobilecta" type="button" class="btn-show btn-mobile-fixed hidden-lg" data-toggle="modal" data-target=".bs-example-modal-sm">Acheter une entrée</button>
 
   <div class="details">
     <h1>Les détails de la salle</h1>
@@ -32,9 +32,9 @@
     <h2>Notre offre</h2>
     <br>
     <div class="entry">1 entrée:</div>
-    <div class="price"> <%= @gym.price %> € </div>
+    <div class="price"> <%= humanized_money(@gym.price)%> € </div>
     <br>
-    <button type="button" class="btn" data-toggle="modal" data-target=".bs-example-modal-sm">Acheter une entrée</button>
+    <button type="button" class="btn-show" data-toggle="modal" data-target=".bs-example-modal-sm">Acheter une entrée</button>
   </div>
 </div>
 <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
@@ -43,9 +43,12 @@
       <h3 class="text-center">Récapitulatif de votre commande</h3>
       <p>Vous avez choisi 1 entrée chez <%= @gym.name %></p>
       <p>Elle sera valide, jusqu'au <%= 30.days.from_now.day %>/<%= 30.days.from_now.month %></p>
-      <p>Coût total: <span class="prix"> <%= @gym.price %> € </span></p>
+      <p>Coût total: <span class="prix"> <%= humanized_money(@gym.price)%> € </span></p>
       <% if user_signed_in?  %>
-        <%= link_to "Acheter une entrée",  gym_bookings_path(@gym), method: :post %>
+        <%= form_tag gym_bookings_path(@gym) do %>
+          <%= hidden_field_tag 'gym_id', @gym.id %>
+          <%= submit_tag 'Acheter une entrée', class: 'btn-show' %>
+        <% end %>
       <% else %>
         <%= link_to "Connectez-vous pour acheter une entrée", user_session_path %>
       <% end %>
