--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -16,12 +16,13 @@
   padding: 25px 40px;
   background-color: rgba(8, 76, 97, 0.3);
   border-radius: 6px;
-  max-width:100%;
+  max-width:95%;
+  max-height: 95%;
 }
 
 
 .banner h1 {
-  font-size: 55px;
+  font-size: 3em;
   font-weight: 700;
   text-shadow: 1px 2px rgba(112, 81, 39, 0.4);
   font-family: 'Alegreya Sans', sans-serif;
@@ -30,7 +31,7 @@
 }
 .banner p {
   padding-top: 20px;
-  font-size: 30px;
+  font-size: 2.2em;
   font-weight: 300;
   color: rgba(255, 255, 255, 0.9);
   text-shadow: 1px 1px rgba(0, 0, 0, 0.4);
@@ -38,3 +39,30 @@
   font-family: 'Alegreya Sans', sans-serif;
 }
 
+
+@media screen and (min-width: 320px){
+  .small-iphone {
+    display: block;
+    font-size: 2.2em;
+    color: white;
+    font-weight: 700;
+    font-family: 'Alegreya Sans', sans-serif;
+    text-shadow: 1px 2px rgba(112, 81, 39, 0.4);
+    margin-bottom: 15px;
+    line-height: 1.3;
+  }
+
+  .slideRight{
+    display: none;
+  }
+}
+
+@media screen and (min-width: 360px){
+  .small-iphone {
+    display: none;
+  }
+
+  .slideRight{
+    display: block;
+  }
+}
