--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,7 +17,7 @@
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions banner-wagon-button">
     <%= f.button :submit, "Update" %>
   </div>
 <% end %>
