--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,19 +1,23 @@
-<h2>Sign up</h2>
+<div class="container login-container">
+  <div class="row">
+    <div class="col-xs-12 col-md-4 col-md-offset-4">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<%= f.error_notification %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= f.error_notification %>
+      <div class="form-inputs">
+        <h2>Sign up</h2>
+        <%= f.input :email, required: true, autofocus: true %>
+        <%= f.input :first_name, required: true %>
+        <%= f.input :last_name, required: true %>
+        <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+        <%= f.input :password_confirmation, required: true %>
+          <%= f.button :submit, "Sign up", class: "btn btn-block" %>
+      <%= render 'devise/shared/links'%>
 
-<div class="form-inputs">
-  <%= f.input :email, required: true, autofocus: true %>
-  <%= f.input :first_name, required: true %>
-  <%= f.input :last_name, required: true %>
-  <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-  <%= f.input :password_confirmation, required: true %>
+      </div>
+
+      <% end %>
+
+    </div>
+  </div>
 </div>
-
-<div class="form-actions">
-  <%= f.button :submit, "Sign up" %>
-</div>
-<% end %>
-
-<%= render "devise/shared/links" %>
