--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -3,24 +3,14 @@
   <div class="banner-center">
     <h1 class='slideRight' > Le sport pas cher et sans engagement ! </h1>
     <p class='slideRight'> Trouvez votre salle en quelques clics </p>
+    <div class="small-iphone">Le sport sans frais en trois clics !</div>
+
 
     <div class="container">
       <div class="row">
-        <div class="hidden-md hidden-lg">
-          <%= link_to "Trouvez votre salle", gyms_path, class: "banner-wagon-button" %>
-        </div>
-        <div class="hidden-xs hidden-sm">
-          <div class="svg-wrapper">
-            <svg height="40" width="150"
-              xmlns="http://www.w3.org/2000/svg">
-              <rect id="shape" height="40" width="150" />
-              <div id="text">
-                <a href="/gyms"><span class="spot"></span>Trouvez votre salle</a>
-              </div>
-            </svg>
-          </div>
-        </div>
+        <%= link_to "Trouvez votre salle", gyms_path, class: "banner-wagon-button" %>
       </div>
     </div>
   </div>
 </div>
+
