--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -11,7 +11,7 @@
         <br>
         <%= f.input :email, required: true, autofocus: true %>
         <div class="form-actions">
-          <%= f.button :submit, "Reset password instructions", class: "btn btn-block" %>
+          <%= f.button :submit, "Reset password instructions", class: "btn btn-block btn-red" %>
           <br>
           <%= render "devise/shared/links" %>
         </div>
