--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -2,11 +2,11 @@
 
 
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-block" %><br />
+  <%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-block btn-red" %><br />
   <% end -%>
 
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-block" %><br />
+  <%= link_to "Forgot your password?", new_password_path(resource_name), class: "btn btn-block btn-red" %><br />
   <% end -%>
 
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
@@ -14,7 +14,7 @@
   <% end -%>
 
   <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "btn btn-block" %><br />
+  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name), class: "btn btn-block btn-red" %><br />
   <% end -%>
   <%- if devise_mapping.omniauthable? %>
     <%- resource_class.omniauth_providers.each do |provider| %>
