fixed the forms

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -8,6 +8,14 @@
 
 }
 
+.form-inputs h1 {
+  font-size: 2.6em;
+  font-weight: 700;
+  text-shadow: 1px 2px rgba(50, 50, 50, 0.5);
+  font-family: 'Alegreya Sans', sans-serif;
+  color:#000000;
+}
+
 .form-actions {
   border-radius: 5px;
   box-shadow: 1px 1px 4px rgba(80,80,80,0.2);
