--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -17,8 +17,8 @@
     <%= f.input :current_password, hint: "we need your current password to confirm your changes", required: true %>
   </div>
 
-  <div class="form-actions banner-wagon-button">
-    <%= f.button :submit, "Update" %>
+  <div class="form-actions">
+    <%= f.button :submit, "Update", class: "btn btn-block btn-red" %>
   </div>
 <% end %>
 
