--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,15 +1,15 @@
 .btn-blue{
   background-color: #3b5998 !important;
-  margin-top: 8px;
   color: white !important;
-  font-size: 1.3em;
+  font-size: 20px;
+  font-family: 'Alegreya Sans', sans-serif !important;
 }
 
 .btn-red{
   background-color: #FF4F4F !important;
   color: white !important;
   font-family: 'Alegreya Sans', sans-serif !important;
-  font-size: 1.3em;
+  font-size: 20px !important;
 }
 
 .btn-blue:hover{
