--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,6 +3,7 @@
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
   hopfit
   <% end %>
+  <div class="catch-phrase">Les meilleures salles, au meilleur prix.</div>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right">
