--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,31 +1,29 @@
-<h1>Voici toutes nos salles partenaires</h1>
-
-<% @gyms.each do |gym| %>
-<p> Nom: <%= gym.name %></p>
-<p> Adresse <%= gym.address %></p>
-<p> <%= link_to "Consultez la page de la salle",  gym_path(gym) %> </p>
-<% end %>
-
-<div class="container">
-  <div class="row">
-      <div class="hidden-xs hidden-sm" id="map" style="width: 100%; height: 600px;"></div>
+<div class="row">
+  <div class="col-xs-12 col-md-7">
+    <div class="cards-index">
+      <%= render "shared/cards" %>
+    </div>
+  </div>
+  <div class="col-md-5 hidden-xs hidden-sm">
+    <div class="map-index" id="map">
+    </div>
   </div>
 </div>
 
-    <% content_for(:after_js) do %>
-      <%= javascript_tag do %>
-        $(document).ready(function() {
-          var handler = Gmaps.build('Google');
-          handler.buildMap({ provider: {scrollwheel: false}, internal: { id: 'map' } }, function() {
-            markers = handler.addMarkers(<%= raw @hash.to_json %>);
-            handler.bounds.extendWith(markers);
-            handler.fitMapToBounds();
-            if (markers.length == 0) {
-              handler.getMap().setZoom(2);
-            } else if (markers.length == 1) {
-              handler.getMap().setZoom(14);
-            }
-          });
-        });
-      <% end %>
-    <% end %>
+<% content_for(:after_js) do %>
+<%= javascript_tag do %>
+$(document).ready(function() {
+var handler = Gmaps.build('Google');
+handler.buildMap({ provider: {scrollwheel: false}, internal: { id: 'map' } }, function() {
+markers = handler.addMarkers(<%= raw @hash.to_json %>);
+handler.bounds.extendWith(markers);
+handler.fitMapToBounds();
+if (markers.length == 0) {
+handler.getMap().setZoom(2);
+} else if (markers.length == 1) {
+handler.getMap().setZoom(14);
+}
+});
+});
+<% end %>
+<% end %>
