--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,6 +14,7 @@
   flex-direction: column;
   margin-bottom: 15px;
   margin-top: 5px;
+  text-align:center;
 }
 
 .fancy-title{
@@ -22,6 +23,7 @@
   text-shadow: 1px 1px rgba(10, 10, 10, 0.7);
   font-family: 'Alegreya Sans', sans-serif;
   color:#000015;
+  padding: 10px;
 
 }
 
@@ -32,6 +34,7 @@
   font-family: 'Alegreya Sans', sans-serif;
   color:#000015;
   padding-bottom: 15px;
+  padding: 10px;
 }
 
 .home-card{
