--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -4,7 +4,7 @@
       <%= render "shared/cards" %>
     </div>
   </div>
-  <div class="col-md-5 hidden-xs hidden-sm">
+  <div class="col-md-5 hidden-xs hidden-sm map-position">
     <div class="map-index" id="map">
     </div>
   </div>
