--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<div id="footer">
+<div id="footer" class="fixed">
   <svg class="svg--source" width="0" height="0" aria-hidden="true">
 
     <symbol id="svg--twitter" viewbox="0 -7 15 30">
