--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon navbar-wagon-fixed">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
   hopfit
   <% end %>
-  <div class="catch-phrase">Les meilleures salles, au meilleur prix.</div>
+  <div class="catch-phrase hidden-xs">Les meilleures salles, au meilleur prix.</div>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right">
