--- a/app/assets/stylesheets/pages/_gymindex.scss
+++ b/app/assets/stylesheets/pages/_gymindex.scss
@@ -9,5 +9,14 @@
 
 .map-index{
   width: 100%;
-  height: 85vh;
+  height: calc(100vh - 70px);
+}
+
+.map-position {
+  display: block;
+  position: fixed;
+  right: 0px;
+  padding: 0px !important;
+  top: 70px;
+  bottom: 70px;
 }
