--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,44 +1,44 @@
-
 <%= render 'shared/banner' %>
-  <div class="home-description" >
-    <div><h1 class="fancy-title">Comment ça marche ?</h1></div>
-    <div><h2 class="fancy-subtitle">Trouvez la salle ou le cours qui vous convient et reservez-le en trois clics</h2></div>
-  </div>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-4">
-        <div class="home-card">
-          <span class="fa fa-search" aria-hidden="true" style="font-size: 25px;">
-          </span>
-          <h3>
-           Cherchez votre salle ou votre cours parmi tous nos partenaires
-         </h3>
-       </div>
-       </div>
-       <div class="col-xs-12 col-sm-4">
-        <div class="home-card">
-          <span class="fa fa-credit-card-alt" aria-hidden="true" style="font-size: 25px;">
-          </span>
-          <h3>
-           Économisez jusqu'à 50% du prix de votre cours de sport
-          </h3>
-        </div>
-      </div>
-      <div class="col-xs-12 col-sm-4">
-        <div class="home-card">
-          <span class="fa fa-shield" aria-hidden="true" style="font-size: 25px;">
-          </span>
-          <h3>
-           Reservez votre activité en toute sécurité
-         </h3>
-       </div>
+
+<div class="home-description" >
+  <div><h1 class="fancy-title">Comment ça marche ?</h1></div>
+  <div><h2 class="fancy-subtitle">Trouvez la salle ou le cours qui vous convient et reservez-le en trois clics</h2></div>
+</div>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-4">
+      <div class="home-card">
+        <span class="fa fa-search" aria-hidden="true" style="font-size: 25px;">
+        </span>
+        <h3>
+         Cherchez votre salle ou votre cours parmi tous nos partenaires
+       </h3>
+     </div>
+     </div>
+     <div class="col-xs-12 col-sm-4">
+      <div class="home-card">
+        <span class="fa fa-credit-card-alt" aria-hidden="true" style="font-size: 25px;">
+        </span>
+        <h3>
+         Économisez jusqu'à 50% du prix de votre cours de sport
+        </h3>
       </div>
     </div>
-  </div>
-  <div class="container">
-    <div class="row">
-     <div class="hidden-md hidden-lg">
-       <%= link_to "Trouvez votre salle", gyms_path, class: "banner-wagon-button" %>
+    <div class="col-xs-12 col-sm-4">
+      <div class="home-card">
+        <span class="fa fa-shield" aria-hidden="true" style="font-size: 25px;">
+        </span>
+        <h3>
+         Reservez votre activité en toute sécurité
+       </h3>
      </div>
-   </div>
+    </div>
   </div>
+</div>
+<div class="container">
+  <div class="row">
+   <div class="col-xs-12 hidden-md hidden-lg btn-show btn-red">
+     <%= link_to "Trouvez votre salle", gyms_path %>
+   </div>
+ </div>
+</div>
