--- a/app/assets/stylesheets/pages/_gymshow.scss
+++ b/app/assets/stylesheets/pages/_gymshow.scss
@@ -42,7 +42,7 @@
 }
 
 .details {
-  flex: 3;
+  flex: 5;
   // overflow: auto;
   margin-left: 30px;
   max-width: 800px;
@@ -61,9 +61,9 @@
 
 .offre {
   flex: 1;
-  margin-left: 140px;
-  margin-right: 160px;
+  align-items: center;
   height: 90%;
+  width: 50%;
   border: solid 1px;
   border-color: #f4f4f4;
   padding: 0px 80px 50px 80px;
@@ -127,7 +127,7 @@
   font-weight:bolder;
   border-bottom: 1px solid;
   border-color: #f4f4f4;
-  padding: 60px;
+  padding: 20px;
 }
 
 .description {
@@ -174,5 +174,6 @@
   padding: 10px;
   border: solid 1px;
   border-color: #e0e0e0;
+  width: 60%;
 }
 
