--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -14,8 +14,15 @@
 <%= javascript_tag do %>
 $(document).ready(function() {
 var handler = Gmaps.build('Google');
-handler.buildMap({ provider: {scrollwheel: false}, internal: { id: 'map' } }, function() {
-markers = handler.addMarkers(<%= raw @hash.to_json %>);
+handler.buildMap({
+provider: {
+scrollwheel: false},
+internal: {
+id: 'map'
+}
+}, function() {
+markers = handler.addMarkers(
+<%= raw @hash.to_json %>);
 handler.bounds.extendWith(markers);
 handler.fitMapToBounds();
 if (markers.length == 0) {
@@ -23,6 +30,7 @@ handler.getMap().setZoom(2);
 } else if (markers.length == 1) {
 handler.getMap().setZoom(14);
 }
+
 });
 });
 <% end %>
