--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -2,33 +2,26 @@
   <h1>Voici toutes nos salles partenaires</h1>
   <% @gyms.each do |gym| %>
   <div class ="col-xs-12 col-sm-6" >
+    <%= link_to gym_path(gym) do %>
     <div class="card">
       <div class="image-card"
-        style='background-image: url("<%= gym.photo.url %>")' >
-        <div class="overlay">
-          <div class="descript-card">
-            <div class="text">
-              <p><%= gym.address %></p>
-            </div>
-          </div>
+      style='background-image: url("<%= gym.photo.url %>"),linear-gradient(-225deg, rgba(52, 18, 0, 0.6) 0%, rgba(110, 55, 0, 0.4) 50%)' >
 
-          <!-- <div class="card-category"> -->
-          <!-- <%#= cl_image_tag gym.photo, class: "avatar" %> -->
-          <!-- </div> -->
-          <div class="card-description">
-            <%= link_to gym_path(gym) do %>
-            <h2><%= gym.name %></h2>
-            <% end %>
+          <div class="text">
+            <p><%= gym.name %></p>
           </div>
-        </div>
+        <div class="card-description">
+          <h2><%= gym.address %></h2>
+
+      </div>
       </div>
       <h3>
         <span class="fa fa-credit-card-alt" aria-hidden="true"></span>
         <%= gym.price %>
         <i class="fa fa-eur" aria-hidden="true"></i>
-        / entrée
       </h3>
     </div>
+    <% end %>
   </div>
   <% end %>
 </div>
