--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,21 +1,3 @@
-
-// .overlay {
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-//   height: 100%;
-//   width: 100%;
-//   opacity: 0;
-//   transition: .25s ease;
-//   background-color: #008CBA;
-// }
-
-// .card:hover .overlay {
-//   opacity: 1;
-// }
-
 .card{
   border-radius: 4px;
   box-shadow: 2px 2px 4px  rgba(0,0,0,0.3);
@@ -24,39 +6,37 @@
   margin-top: 20px;
   margin-bottom: 40px;
   position: relative;
-  text-decoration: none;
+  a {
+    &:hover {
+    }
+  }
+  text-align: center;
 }
 
-.card:hover{
-  text-decoration: none;
+.small-card{
+  border-radius: 4px;
+  box-shadow: 2px 2px 4px  rgba(0,0,0,0.3);
+  background-color: rgba(245,245,245,0.7);
+  position: relative;
+  max-width: 200px;
+  max-height: 200px;
 }
 
 .text {
-  color: #ffffff;
+  top:10px;
+  left:10px;
   font-size: 20px;
-  font-weight: 500;
+  font-weight:600;
   position: absolute;
-  overflow: hidden;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  width: 100%;
-  padding-left: 10px;
   font-family: 'Alegreya Sans', sans-serif;
 }
 
-.card h3{
+.card h2{
   color:rgba(10,10,10,1);
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   text-shadow: 0 1px 5px rgba(0,0,0,0.3);
   margin-bottom: 10px;
-  text-decoration: none;
-}
-
-.card h3:hover {
-  text-decoration: none;
 }
 
 .image-card {
@@ -68,47 +48,76 @@
   height: 300px;
   background-image: linear-gradient(-225deg, rgba(52, 18, 0, 0.6) 0%, rgba(110, 55, 0, 0.5) 50%);
 }
+.imagecard {
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.9);
+  width: 200px;
+  height: 200px;
+  background-position: center;
+  background-size: cover !important;
+  color: white;
+  background-image: linear-gradient(-225deg, rgba(52, 18, 0, 0.6) 0%, rgba(110, 55, 0, 0.5) 50%);
 
-.card-description a:hover {
-  text-decoration: none;
 }
 
-.image-card h2{
+.image-card h3{
   color: white;
   font-family: 'Alegreya Sans', sans-serif;
-  font-size: 22px;
+  font-size: 25px;
   font-weight:400;
   text-shadow: 0 2px 2px rgba(10,10,10,0.8);
+  background-color: rgba(255, 221, 0, 0.9);
+  border-radius: 12px;
+  padding: 10px;
+  position: absolute;
+  bottom: 2px;
+  right:2px;
+  box-shadow: 2px 2px 4px  rgba(0,0,0,0.5);
+  min-width: 130px;
 }
 
-.image-card h2:hover{
+.imagecard h3{
   color: white;
   font-family: 'Alegreya Sans', sans-serif;
-  text-decoration: none;
+  font-size: 20px;
+  font-weight:400;
+  text-shadow: 0 2px 2px rgba(10,10,10,0.8);
+  background-color: rgba(255, 221, 0, 0.9);
+  border-radius: 12px;
+  padding: 10px;
+  position: absolute;
+  bottom:2px;
+  right:2px;
+  box-shadow: 2px 2px 4px  rgba(0,0,0,0.5);
+  min-width: 90px;
 }
 
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
-}
-.card-category {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  font-size: 10px;
-  text-transform: uppercase;
-}
+
 .card-description {
   position: absolute;
-  bottom: 10px;
-  left: 10px;
-
+  bottom: 0px;
+  right: 0px;
+  color: white !important;
+  font-weight: 300;
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 20px;
+  text-align: center;
+  padding: 15px;
 }
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 13px;
-  }
 
+.card-price{
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.address{
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.9);
+  font-family: 'Alegreya Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+  text-shadow: 0 1px 5px rgba(0,0,0,0.3);
+  margin-bottom: 10px;
+  top: 40px;
+  position: absolute;
+  padding: 5px;
+}
