--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -8,6 +8,10 @@
 
     <div class="container">
       <div class="row">
+        <%= simple_form_for(:search, on: :collection, url: search_gyms_path, method: :get) do |f| %>
+        <%= f.input :query %>
+        <%= f.button :submit, "Search" %>
+        <% end %>
         <%= link_to "Trouvez votre salle", gyms_path, class: "banner-wagon-button" %>
       </div>
     </div>
