--- a/app/views/shared/_cards.html.erb
+++ b/app/views/shared/_cards.html.erb
@@ -1,5 +1,8 @@
 <div class="row">
-  <h1>Voici toutes nos salles partenaires</h1>
+<h1 class="text-center">Voici toutes nos salles partenaires</h1>
+<% if @gyms == Gym.all %>
+  <p> Désolé, nous n'avons pas trouvé de résultats a votre recherche </p>
+<% end %>
   <% @gyms.each do |gym| %>
   <div class ="col-xs-12 col-sm-6" >
     <%= link_to gym_path(gym) do %>
