--- a/app/views/gyms/index.html.erb
+++ b/app/views/gyms/index.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 70px;">
   <div class="col-xs-12 col-md-7">
     <div class="cards-index">
       <%= render "shared/cards" %>
